--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "mongoose": "^9.1.4",
     "multer": "^2.0.2",
     "nodemailer": "^7.0.12",
+    "rate-limit-redis": "^4.3.1",
     "sharp": "^0.34.5",
     "useragent": "^2.3.0",
     "uuid": "^13.0.0",
